[project]
name = "NEW"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "rdkit>=2026.3.2",
    "scikit-learn>=1.7.2",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
]
# uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu126